Implement function for set initial meter value from web interface

--- a/data/index.html
+++ b/data/index.html
@@ -131,6 +131,22 @@
                             </div>
                         </form>
                     </div>
+
+
+                    <div class="col-sm-6">
+                        <h1>Settings</h1>
+
+                        <form id="settings">
+                            <div class="mb-3">
+                                <label for="initialValue" class="form-label">Initial value</label>
+                                <input type="text" class="form-control" name="initialValue" id="initialValue">
+                            </div>
+
+                            <div class="mb-12">
+                                <button type="submit" class="btn btn-primary">Save</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </main>
