--- a/data/index.html
+++ b/data/index.html
@@ -147,6 +147,50 @@
                             </div>
                         </form>
                     </div>
+
+                    <div class="col-sm-6">
+                        <h1>modbus settings</h1>
+
+                        <form id="modbus-settings">
+                            <div class="mb-3">
+                                <label for="modbusSpeed" class="form-label">Speed</label>
+                                <select class="form-control" name="modbusSpeed" id="modbusSpeed">
+                                    <option value="1200">1200</option>
+                                    <option value="2400">2400</option>
+                                    <option value="4800">4800</option>
+                                    <option value="9600">9600</option>
+                                    <option value="19200">19200</option>
+                                    <option value="38400">38400</option>
+                                    <option value="57600">57600</option>
+                                    <option value="115200">115200</option>
+                                </select>
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="addressWBMSW" class="form-label">Address WB-MSW</label>
+                                <input type="number" class="form-control" name="addressWBMSW" id="addressWBMSW">
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="addressWBMCM8" class="form-label">Address WB-MCM8</label>
+                                <input type="number" class="form-control" name="addressWBMCM8" id="addressWBMCM8">
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="addressWBLED1" class="form-label">Address WB-LED 1</label>
+                                <input type="number" class="form-control" name="addressWBLED1" id="addressWBLED1">
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="addressWBLED2" class="form-label">Address WB-LED 2</label>
+                                <input type="number" class="form-control" name="addressWBLED2" id="addressWBLED2">
+                            </div>
+
+                            <div class="mb-12">
+                                <button type="submit" class="btn btn-primary">Save</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </main>
