--- a/data/index.html
+++ b/data/index.html
@@ -110,6 +110,16 @@
                             </div>
 
                             <div class="mb-3">
+                                <label for="mqttShelfSwitchCommandTopic" class="form-label">Shelf switch command topic</label>
+                                <input type="text" class="form-control" name="mqttShelfSwitchCommandTopic" id="mqttShelfSwitchCommandTopic">
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="mqttMainLightSwitchCommandTopic" class="form-label">Main light switch command topic</label>
+                                <input type="text" class="form-control" name="mqttMainLightSwitchCommandTopic" id="mqttMainLightSwitchCommandTopic">
+                            </div>
+
+                            <div class="mb-3">
                                 <label for="mqttStateTopic" class="form-label">State topic</label>
                                 <input type="text" class="form-control" name="mqttStateTopic" id="mqttStateTopic">
                             </div>
